--- a/task1/tex/sprawozdanie_wzor.tex
+++ b/task1/tex/sprawozdanie_wzor.tex
@@ -132,53 +132,16 @@ Dla każdego algorytmu podawana jest ilość iteracji, ilość centroidów(neuro
 
 \newpage
 
-\begin{figure}[h!]
- \centering
- \includegraphics[width=12cm]{img/kohonensample1_6_10.png}
- \vspace{-0.3cm}
- \caption{Data: sample1 Algorytm: kohonena n = 6 iter = 10
-  mapRadius = 0.1 learningRate = 0.7 timeConst = 1  
-}
-\end{figure}
-
-\begin{figure}[h!]
-\centering
- \includegraphics[width=12cm]{img/kohonencircle1_6_10.png}
- \vspace{-0.3cm}
- \caption{Data: circle1 Algorytm: kohonena n = 6 iter = 10
-  mapRadius = 0.1 learningRate = 0.7 timeConst = 1  
-}
-\end{figure}
-
-\newpage
 
 \begin{figure}[h!]
 \centering
  \includegraphics[width=12cm]{img/kohonensample1_6_1000.png}
  \vspace{-0.3cm}
  \caption{Data: sample1 Algorytm: kohonena n = 6 iter = 1000
-  mapRadius = 1 learningRate = 0.1 timeConst = 1  
+  mapRadius = 1 learningRate = 0.1 learningRate0 = 1  
 }
 \end{figure}
 
-\begin{figure}[h!]
-\centering
- \includegraphics[width=12cm]{img/neuralsample1_6_10.png}
- \vspace{-0.3cm}
- \caption{Data: sample1 Algorytm: gazu neuronowego n = 6 iter = 10
-  mapRadius = 0.1 learningRate = 0.7 timeConst = 1  
-}
-\end{figure}
-
-\newpage
-\begin{figure}[h!]
-\centering
- \includegraphics[width=12cm]{img/neuralcircle1_6_10.png}
- \vspace{-0.3cm}
- \caption{Data: circle1 Algorytm: gazu neuronowego n = 6 iter = 10
-  mapRadius = 0.1 learningRate = 0.7 timeConst = 1  
-}
-\end{figure}
 \newpage
 
 \begin{figure}[h!]
@@ -186,7 +149,7 @@ Dla każdego algorytmu podawana jest ilość iteracji, ilość centroidów(neuro
  \includegraphics[width=12cm]{img/neuralsample1_6_1000.png}
  \vspace{-0.3cm}
  \caption{Data: circle1 Algorytm: gazu neuronowego n = 6 iter = 1000
-  mapRadius = 1 learningRate = 0.1 timeConst = 1  
+  mapRadius = 1 learningRate = 0.1 learningRate0  = 1  
 }
 \end{figure}
 
@@ -222,7 +185,7 @@ Dla każdego algorytmu podawana jest ilość iteracji, ilość centroidów(neuro
 \centering
  \includegraphics[width=12cm]{img/kohonen_4.png}
  \vspace{-0.0cm}
- \caption{Data: lenakolor3 Algorytm: kohonena frameSz = 3 n = 20 iter = 10000 mapRadius = 100 learningRate = 0.1 lrc = 0.1
+ \caption{Data: lenakolor3 Algorytm: kohonena frameSz = 3 n = 20 iter = 10000 mapRadius = 100 learningRate = 0.1 learningRate0 = 0.1
 }
 \end{figure}
 
@@ -230,7 +193,7 @@ Dla każdego algorytmu podawana jest ilość iteracji, ilość centroidów(neuro
 \centering
  \includegraphics[width=12cm]{img/kohonen_5.png}
  \vspace{-0.0cm}
- \caption{Data: lenakolor3 Algorytm: kohonena frameSz = 3 n = 20 iter = 1000 mapRadius = 0.01 learningRate = 0.1 lrc = 1
+ \caption{Data: lenakolor3 Algorytm: kohonena frameSz = 3 n = 20 iter = 1000 mapRadius = 0.01 learningRate = 0.1 learningRate0 = 1
 }
 \end{figure}
 
@@ -240,7 +203,7 @@ Dla każdego algorytmu podawana jest ilość iteracji, ilość centroidów(neuro
 \centering
  \includegraphics[width=12cm]{img/kohonen_6.png}
  \vspace{-0.0cm}
- \caption{Data: lenakolor3 Algorytm: kohonena frameSz = 3 n = 20 iter = 10000 mapRadius = 300 learningRate = 0.1 lrc = 0.01
+ \caption{Data: lenakolor3 Algorytm: kohonena frameSz = 3 n = 20 iter = 10000 mapRadius = 300 learningRate = 0.1 learningRate0 = 0.01
 }
 \end{figure}
 
@@ -248,7 +211,7 @@ Dla każdego algorytmu podawana jest ilość iteracji, ilość centroidów(neuro
 \centering
  \includegraphics[width=12cm]{img/neural_1.png}
  \vspace{-0.0cm}
- \caption{Data: lenakolor3 Algorytm: kohonena frameSz = 3 n = 20 iter = 1000 mapRadius = 100 learningRate = 0.1 lrc = 1
+ \caption{Data: lenakolor3 Algorytm: gazu neuronowego frameSz = 3 n = 20 iter = 1000 mapRadius = 100 learningRate = 0.1 learningRate0 = 1
 }
 \end{figure}
 
@@ -258,7 +221,7 @@ Dla każdego algorytmu podawana jest ilość iteracji, ilość centroidów(neuro
 \centering
  \includegraphics[width=12cm]{img/neural_3.png}
  \vspace{-0.0cm}
- \caption{Data: lenakolor3 Algorytm: kohonena frameSz = 3 n = 20 iter = 1000 mapRadius = 300 learningRate = 0.1 lrc = 0.01
+ \caption{Data: lenakolor3 Algorytm: gazu neuronowego frameSz = 3 n = 20 iter = 1000 mapRadius = 300 learningRate = 0.1 learningRate0  = 0.01
 }
 \end{figure}
 
@@ -266,7 +229,7 @@ Dla każdego algorytmu podawana jest ilość iteracji, ilość centroidów(neuro
 \centering
  \includegraphics[width=12cm]{img/neural_4.png}
  \vspace{-0.0cm}
- \caption{Data: lenakolor3 Algorytm: kohonena frameSz = 3 n = 20 iter = 1000 mapRadius = 0.01 learningRate = 0.1 lrc = 1
+ \caption{Data: lenakolor3 Algorytm: gazu neuronowego frameSz = 3 n = 20 iter = 1000 mapRadius = 0.01 learningRate = 0.1 learningRate0  = 1
 }
 \end{figure}
 
@@ -276,37 +239,19 @@ Dla każdego algorytmu podawana jest ilość iteracji, ilość centroidów(neuro
 \centering
  \includegraphics[width=12cm]{img/neural_5.png}
  \vspace{-0.0cm}
- \caption{Data: lenakolor3 Algorytm: kohonena frameSz = 3 n = 20 iter = 1000 mapRadius = 100 learningRate = 1.5 lrc = 1
+ \caption{Data: lenakolor3 Algorytm: gazu neuronowego frameSz = 3 n = 20 iter = 1000 mapRadius = 100 learningRate = 1.5 learningRate0  = 1
 }
 \end{figure}
 }
 
 
-\section{Dyskusja}
-{\color{blue}
-Sekcja ta powinna zawierać dokładną interpretację uzyskanych wyników
-eksperymentów wraz ze szczegółowymi wnioskami z nich płynącymi. Najcenniejsze
-są, rzecz jasna, wnioski o charakterze uniwersalnym, które mogą być istotne
-przy innych, podobnych zadaniach. Należy również omówić i wyjaśnić wszystkie
-napotkane problemy (jeśli takie były). Każdy wniosek powinien mieć poparcie we
-wcześniej przeprowadzonych eksperymentach (odwołania do konkretnych wyników).
-Jest to jedna z najważniejszych sekcji tego sprawozdania, gdyż prezentuje
-poziom zrozumienia badanego problemu.}
-
-\section{Wnioski}
-{\color{blue}
-W tej, przedostatniej, sekcji należy zamieścić podsumowanie najważniejszych
-wniosków z sekcji poprzedniej. Najlepiej jest je po prostu wypunktować. Znów,
-tak jak poprzednio, najistotniejsze są wnioski o charakterze uniwersalnym.}
-
-\begin{thebibliography}{0}
-  \bibitem{l2short} T. Oetiker, H. Partl, I. Hyna, E. Schlegl.
-    \textsl{Nie za krótkie wprowadzenie do systemu \LaTeX2e}, 2007, dostępny
-    online.
-\end{thebibliography}
-
-{\color{blue}
-Na końcu należy obowiązkowo podać cytowaną w sprawozdaniu literaturę, z której
-grupa korzystała w trakcie prac nad zadaniem.}
+\section{Dyskusja i wnioski}
+\subsection{Algorytm k-średnich}
+Algorytm k-średnich wymaga niewielkiej liczby iteracji aby osiągnąć satysfakcjonujące wyniki. Neurony nie są tutaj ze sobą powiązane, przemieszczenie jednego nie wpływa bezpośrednio na położenie sąsiednich. W przypadku tego algorytmu zbyt mała ilość iteracji może mieć wpływ na pogorszenie wyniku lub złe położenie początkowe neuronów jednak drugi czynnik jest minimalizowany poprzez losowanie początkowego położenia na podstawie rozkładu Gaussa.
+\subsection{Algorytm Kohonena i gazu neuronowego}
+Dla algorytmu Kohonena duże znaczenie mają początkowe parametry. Dla zbyt dużego promienia, który będzie stosunkowo wolno malał wszystkie neurony zbiegną się do środka ciężkości - Rys. 4). Prawidłowo przeprowadzony algorytm powinien przebiegać w dwóch etapach. W pierwszym promień sąsiedztwa i szybkość nauki powinny być stosunkowo duże tak aby sieć przesunęła się w kierunku skupisk danych. Drugim etapem jest wymodelowanie sieci dla okolicznych punktów. Tutaj promień sąsiedztwa i szybkość nauki są już niewielkie. Ze względu na to, że początkowe położenie neuronów obliczamy na postawie rozkładu Gaussa, pierwszy etap jest pomijalny. Z tego powodu dla Rys. 9 gdzie początkowy promień był niewielki uzyskano lepszy wynik niż dla Rys.10 gdzie promień był większy, co powodowało skupienie się neuronów do większych klastrów, natomiast mniejsze nie zostały uwzględnione przez co obrazek na Rys. 10 ma mniej szczegółów. \\
+Algorytm gazu neuronowego działa najlepiej gdy promień sąsiedztwa obejmuje część sąsiednich neuronów - Rys 11. Promień sąsiedztwa nie jet tutaj tak inwazyjny i nie powoduje tak dużego przyciągania się neuronów znajdującego się wewnątrz promienia, a umożliwia elastyczne dostosowywanie się sieci.  \\
+Dla obu algorytmów parametr szybkości uczenia powinien być dość mały. Dla większych wartości neurony są zbyt mocno przyciągane do wybranego punktu danych. Na Rys. 14 widać, że obrazek ma większy kontrast niż Rys. 11 co wynika ze zbyt dużej wartości parametru szybkości uczenia.
+}
 
 \end{document}
